Add TK321 download/AUR links

--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
   <body>
     <main>
         <svg id="s" viewBox="0 0 476 476" width="80%"></svg>
-        <h1>Suomipelit</h1>
+        <h1><a href="https://github.com/suomipelit">Suomipelit</a></h1>
         <p class="lede">
-            We archive, port, and maintain classic Finnish freeware and shareware games.
+            We archive, port, and maintain classic Finnish freeware and shareware games.<br />
         </p>
         <h2>Current projects</h2> 
-        <ul class="projects">
-            <li>
-                <a href="https://github.com/suomipelit/ultimatetapankaikki">Ultimate Tapan Kaikki</a>
-                Classic 90s shoot-em-up. Now works on Linux, macOS, Windows and FreeBSD.
-            </li>
-        </ul>
-        Also see the <a href="https://github.com/suomipelit">Suomipelit GitHub organization page</a>. 
+        <div class="project">
+        <h3><a href="http://github.com/suomipelit/ultimatetapankaikki/">Ultimate Tapan Kaikki</a></h3>
+            <p>Classic 90s shoot-em-up. Now works on Linux, macOS, Windows and FreeBSD.</p>
+            <ul>
+                <li>Windows (64-bit): <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v1/tk321-sp1.zip">3.21 SP 1</a></li>
+                <li>Arch Linux: <a href="https://aur.archlinux.org/packages/ultimatetapankaikki/">AUR</a></li>
+                <li>Code: <a href="http://github.com/suomipelit/ultimatetapankaikki/">suomipelit/ultimatetapankaikki</a>
+            </ul>
+        </div>
+        
         <h2>For game authors</h2>
         <p>
             Are you sitting on some old source code for a classic suomipeli?!
