Add TK321 Win32 + macOS links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <h3><a href="http://github.com/suomipelit/ultimatetapankaikki/">Ultimate Tapan Kaikki</a></h3>
             <p>Classic 90s shoot-em-up. Now works on Linux, macOS, Windows and FreeBSD.</p>
             <ul>
-                <li>Windows (64-bit): <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v1/tk321-sp1.zip">3.21 SP 1</a></li>
+                <li>Windows .zip (64-bit): <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v1/tk321-sp1.zip">3.21 SP 1</a></li>
+                <li>Windows .zip (32-bit): <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v1/tk321-sp1-x86.zip">3.21 SP 1</a></li>
+                <li>macOS .dmg: <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v1/tk321-sp1-macos.dmg">3.21 SP 1</a></li>
                 <li>Arch Linux: <a href="https://aur.archlinux.org/packages/ultimatetapankaikki/">AUR</a></li>
                 <li>Code: <a href="http://github.com/suomipelit/ultimatetapankaikki/">suomipelit/ultimatetapankaikki</a>
             </ul>
