--- a/index.html
+++ b/index.html
@@ -5,38 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Suomipelit @ GitHub</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
-        <svg id="s" viewBox="0 0 476 476" width="80%"></svg>
-        <h1><a href="https://github.com/suomipelit">Suomipelit</a></h1>
-        <p class="lede">
-            We archive, port, and maintain classic Finnish freeware and shareware games.<br />
-        </p>
-        <h2>Current projects</h2> 
-        <div class="project">
+      <svg id="s" viewBox="0 0 476 476" width="80%"></svg>
+      <h1><a href="https://github.com/suomipelit">Suomipelit</a></h1>
+      <p class="lede">We archive, port, and maintain classic Finnish freeware and shareware games.<br /></p>
+      <h2>Current projects</h2>
+      <div class="project">
         <h3><a href="http://github.com/suomipelit/ultimatetapankaikki/">Ultimate Tapan Kaikki</a></h3>
-            <p>Classic 90s shoot-em-up. Now works on Linux, macOS, Windows and FreeBSD.</p>
-            <ul>
-                <li>Windows .zip (64-bit): <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v1/tk321-sp1.zip">3.21 SP 1</a></li>
-                <li>Windows .zip (32-bit): <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v1/tk321-sp1-x86.zip">3.21 SP 1</a></li>
-                <li>macOS .dmg: <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v1/tk321-sp1-macos.dmg">3.21 SP 1</a></li>
-                <li>Arch Linux: <a href="https://aur.archlinux.org/packages/ultimatetapankaikki/">AUR</a></li>
-                <li>Code: <a href="http://github.com/suomipelit/ultimatetapankaikki/">suomipelit/ultimatetapankaikki</a>
-            </ul>
-        </div>
-        
-        <h2>For game authors</h2>
-        <p>
-            Are you sitting on some old source code for a classic suomipeli?!
-            Get in touch on Slack, and we'll get to work porting that stuff to 2018 and beyond!
-        </p>
-        <h2>Suomipelit Slack</h2>
-        <p>
-            There's a <a href="https://tinyurl.com/suomipelit-slack" id="slack">Suomipelit Slack</a>
-            community you're more than welcome to join!  We chat in both English and Finnish as necessary.
-        </p>
+        <p>Classic 90s shoot-em-up. Now works on Linux, macOS, Windows and FreeBSD.</p>
+        <ul class="downloads">
+          <li>
+            <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v1/tk321-sp1.zip">
+              <img src="windows.svg" /> <span class="ver">3.21 SP 1</span> Windows x64 .zip
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v1/tk321-sp1-x86.zip">
+              <img src="windows.svg" /> <span class="ver">3.21 SP 1</span>
+              Windows x86 .zip
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v1/tk321-sp1-macos.dmg">
+              <img src="apple.svg" /> <span class="ver">3.21 SP 1</span>
+              macOS .dmg
+            </a>
+          </li>
+          <li>
+            <a href="https://aur.archlinux.org/packages/ultimatetapankaikki/">
+              <img src="arch.svg" /> <span class="ver">3.21 SP 1</span>
+              Arch Linux AUR
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <h2>For game authors</h2>
+      <p>
+        Are you sitting on some old source code for a classic suomipeli?! Get in touch on Slack, and we'll get to work
+        porting that stuff to 2018 and beyond!
+      </p>
+      <h2>Suomipelit Slack</h2>
+      <p>
+        There's a <a href="https://tinyurl.com/suomipelit-slack" id="slack">Suomipelit Slack</a> community you're more
+        than welcome to join! We chat in both English and Finnish as necessary.
+      </p>
     </main>
 
     <script src="rough.min.js"></script>
