--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </p>
       <h2>Suomipelit Slack</h2>
       <p>
-        There's a <a href="https://tinyurl.com/suomipelit-slack" id="slack">Suomipelit Slack</a> community you're more
+        There's a <a href="https://join.slack.com/t/suomipelit/shared_invite/enQtNDg1ODkwODU4MTE4LWExY2Q3Mjc0ODg3OTY3ZjlmYThkZDRlMDBjZWUwM2I4NWZlZTFkMWI4YjM1OTM1ODQ4NGQ1NGFiNjQ5MjY0NzM" id="slack">Suomipelit Slack</a> community you're more
         than welcome to join! We chat in both English and Finnish as necessary.
       </p>
     </main>
