Add Ultimate Tapan Kaikki .deb

--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
             </a>
           </li>
           <li>
-            <a href="https://aur.archlinux.org/packages/ultimatetapankaikki/">
-              <img src="arch.svg" /> <span class="ver">3.21 SP 2</span>
-              Arch Linux AUR
+            <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v2/ultimatetapankaikki_3.21+sp2_amd64.deb">
+              <img src="ubuntu-debian.svg" /> <span class="ver">3.21 SP 2</span>
+              Ubuntu / Debian .deb
             </a>
           </li>
         </ul>
+        <p class="other">
+          Also available on:
+          <a href="https://aur.archlinux.org/packages/ultimatetapankaikki/">Arch Linux (AUR)</a></li>
+        </p>
       </div>
 
       <div class="project">
