--- a/index.html
+++ b/index.html
@@ -60,6 +60,24 @@
         </ul>
       </div>
 
+      <div class="project">
+        <h3><a href="http://github.com/suomipelit/kops/">KOPS</a></h3>
+        <p>Classic two-dimensional gravitational shoot'yer'friend game.</p>
+        <ul class="downloads">
+          <li>
+            <a href="https://github.com/suomipelit/kops/releases/download/v1-win/kops1.2-sp1.zip">
+              <img src="windows.svg" /> <span class="ver">1.2 SP 1</span> Windows x64 .zip
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/suomipelit/kops/releases/download/v1-win/kops1.2-sp1-x86.zip">
+              <img src="windows.svg" /> <span class="ver">1.2 SP 1</span>
+              Windows x86 .zip
+            </a>
+          </li>
+        </ul>
+      </div>
+
       <h2>For game authors</h2>
       <p>
         Are you sitting on some old source code for a classic suomipeli?! Get in touch on Slack, and we'll get to work
