--- a/index.html
+++ b/index.html
@@ -78,6 +78,24 @@
         </ul>
       </div>
 
+      <div class="project">
+        <h3><a href="http://github.com/suomipelit/triplane/">Triplane Classic</a></h3>
+        <p>Classic side-scrolling dogfighting game featuring solo
+        missions and multiplayer mode.</p>
+        <ul class="downloads">
+          <li>
+            <a href="https://github.com/suomipelit/triplane/releases/download/v1.0.8-sp1/triplane1.0.8-sp1.zip">
+              <img src="windows.svg" /> <span class="ver">1.0.8 SP1</span> Windows x64 .zip
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/suomipelit/triplane/releases/download/v1.0.8-sp1/triplane1.0.8-sp1-x86.zip">
+              <img src="windows.svg" /> <span class="ver">1.0.8 SP1</span> Windows x86 .zip
+            </a>
+          </li>
+        </ul>
+      </div>
+
       <h2>For game authors</h2>
       <p>
         Are you sitting on some old source code for a classic suomipeli?! Get in touch on Slack, and we'll get to work
