Add images to projects. Add divider between projects

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="project">
 
         <h3><a href="http://github.com/suomipelit/ultimatetapankaikki/">Ultimate Tapan Kaikki</a></h3>
+        <img src="gifs/tk321.gif" class="image" alt="Ultimate Tapan Kaikki">
         <p>Classic 90s shoot-em-up. Now works on Linux, macOS, Windows and FreeBSD.</p>
         <ul class="downloads">
           <li>
@@ -62,6 +63,7 @@
 
       <div class="project">
         <h3><a href="http://github.com/suomipelit/kops/">KOPS</a></h3>
+        <img src="pngs/kops.png" class="image" alt="KOPS">
         <p>Classic two-dimensional gravitational shoot'yer'friend game.</p>
         <ul class="downloads">
           <li>
@@ -80,6 +82,7 @@
 
       <div class="project">
         <h3><a href="http://github.com/suomipelit/triplane/">Triplane Classic</a></h3>
+        <img src="gifs/triplane.gif" class="image" alt="Triplane">
         <p>Classic side-scrolling dogfighting game featuring solo
         missions and multiplayer mode.</p>
         <ul class="downloads">
