Add image for TK4

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
       <div class="project">
         <h3><a href="http://github.com/suomipelit/tapankaikki4/">Tapan Kaikki 4: Bloodshed</a></h3>
+        <img src="pngs/tk4.png" class="image" alt="Tapan Kaikki 4: Bloodshed">
         <p>Successor of Ultimate Tapan Kaikki.</p>
         <ul class="downloads">
           <li>
