--- a/index.html
+++ b/index.html
@@ -100,6 +100,20 @@
         </ul>
       </div>
 
+      <div class="project">
+        <h3><a href="http://github.com/suomipelit/skijump3-sdl/">Ski Jump International v3</a></h3>
+        <img src="gifs/sj3.gif" class="image" alt="SJ3">
+        <p>Epic ski jumping game with lots of real hills. Challenge
+        your friends in hotseat World Cup.</p>
+        <ul class="downloads">
+          <li>
+            <a href="https://github.com/suomipelit/skijump3-sdl/releases/download/sj313-sp1/sj313-sp1-win64.zip">
+              <img src="windows.svg" /> <span class="ver">3.13 SP 1</span> Windows x64 .zip
+            </a>
+          </li>
+        </ul>
+      </div>
+
       <h2>For game authors</h2>
       <p>
         Are you sitting on some old source code for a classic suomipeli?! Get in touch on Slack, and we'll get to work
