Transcode demo GIFs to WEBM and H.264 too

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       <div class="project">
 
         <h3><a href="http://github.com/suomipelit/ultimatetapankaikki/">Ultimate Tapan Kaikki</a></h3>
-        <img src="gifs/tk321.gif" class="image" alt="Ultimate Tapan Kaikki">
+        <video autoplay muted class="image">
+          <source src="video/tk321.webm" type="video/webm">
+          <source src="video/tk321.mp4" type="video/mp4">
+        </video>
         <p>Classic 90s shoot-em-up. Now works on Linux, macOS, Windows and FreeBSD.</p>
         <ul class="downloads">
           <li>
@@ -83,7 +86,10 @@
 
       <div class="project">
         <h3><a href="http://github.com/suomipelit/triplane/">Triplane Classic</a></h3>
-        <img src="gifs/triplane.gif" class="image" alt="Triplane">
+        <video autoplay muted class="image">
+          <source src="video/triplane.webm" type="video/webm">
+          <source src="video/triplane.mp4" type="video/mp4">
+        </video>
         <p>Classic side-scrolling dogfighting game featuring solo
         missions and multiplayer mode.</p>
         <ul class="downloads">
@@ -102,7 +108,10 @@
 
       <div class="project">
         <h3><a href="http://github.com/suomipelit/skijump3-sdl/">Ski Jump International v3</a></h3>
-        <img src="gifs/sj3.gif" class="image" alt="SJ3">
+        <video autoplay muted class="image">
+          <source src="video/sj3.webm" type="video/webm">
+          <source src="video/sj3.mp4" type="video/mp4">
+        </video>
         <p>Epic ski jumping game with lots of real hills. Challenge
         your friends in hotseat World Cup.</p>
         <ul class="downloads">
