--- a/index.html
+++ b/index.html
@@ -10,168 +10,218 @@
   <body>
     <section>
       <svg id="s" viewBox="0 0 476 476" width="80%"></svg>
-        <h1><a href="https://github.com/suomipelit">Suomipelit</a></h1>
-        <p class="lede">
-          We archive, port, and maintain classic Finnish freeware and shareware games.<br />
-          Have you written a suomipeli, or are interested in porting one? <a href="#contact">Get in touch!</a>
-        </p>
-      </section>
-      <section id="releases">
-        <h2>Game releases</h2>
-        <div class="projects">
-          <div class="project">
-            <header>
-              <h3>Ultimate Tapan Kaikki</h3>
-              <a href="https://github.com/suomipelit/ultimatetapankaikki/">suomipelit/ultimatetapankaikki</a>
-            </header>
-            <video autoplay muted class="image">
-              <source src="video/tk321.webm" type="video/webm">
-              <source src="video/tk321.mp4" type="video/mp4">
-            </video>
-            <p>Classic 90s shoot-em-up. Now works on Linux, macOS, Windows and FreeBSD.</p>
-            <ul class="downloads">
-              <li>
-                <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v2/tk321-sp2.zip">
-                  <img src="windows.svg" />
-                  <span class="ver">3.21 SP 2</span>
-                  <span class="plat">Windows x64 .zip</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v2/tk321-sp2-x86.zip">
-                  <img src="windows.svg" />
-                  <span class="ver">3.21 SP 2</span>
-                  <span class="plat">Windows x86 .zip</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v2/tk321-sp2-macos.dmg">
-                  <img src="apple.svg" />
-                  <span class="ver">3.21 SP 2</span>
-                  <div class="plat">macOS .dmg</div>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v2/ultimatetapankaikki_3.21+sp2_amd64.deb">
-                  <img src="ubuntu-debian.svg" />
-                  <span class="ver">3.21 SP 2</span>
-                  <span class="plat">Ubuntu / Debian .deb</span>
-                </a>
-              </li>
-            </ul>
-            <p class="other">
-              Also available on:
-              <a href="https://aur.archlinux.org/packages/ultimatetapankaikki/">Arch Linux (AUR)</a></li>
-            </p>
-          </div>
+      <h1><a href="https://github.com/suomipelit">Suomipelit</a></h1>
+      <p class="lede">
+        We archive, port, and maintain classic Finnish freeware and shareware
+        games.<br />
+        Have you written a suomipeli, or are interested in porting one?
+        <a href="#contact">Get in touch!</a>
+      </p>
+    </section>
+    <section id="releases">
+      <h2>Game releases</h2>
+      <div class="projects">
+        <div class="project">
+          <header>
+            <h3>Ultimate Tapan Kaikki</h3>
+            <a href="https://github.com/suomipelit/ultimatetapankaikki/"
+              >suomipelit/ultimatetapankaikki</a
+            >
+          </header>
+          <video autoplay muted class="image">
+            <source src="video/tk321.webm" type="video/webm" />
+            <source src="video/tk321.mp4" type="video/mp4" />
+          </video>
+          <p>
+            Classic 90s shoot-em-up. Now works on Linux, macOS, Windows and
+            FreeBSD.
+          </p>
+          <ul class="downloads">
+            <li>
+              <a
+                href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v2/tk321-sp2.zip"
+              >
+                <img src="windows.svg" />
+                <span class="ver">3.21 SP 2</span>
+                <span class="plat">Windows x64 .zip</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v2/tk321-sp2-x86.zip"
+              >
+                <img src="windows.svg" />
+                <span class="ver">3.21 SP 2</span>
+                <span class="plat">Windows x86 .zip</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v2/tk321-sp2-macos.dmg"
+              >
+                <img src="apple.svg" />
+                <span class="ver">3.21 SP 2</span>
+                <div class="plat">macOS .dmg</div>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v2/ultimatetapankaikki_3.21+sp2_amd64.deb"
+              >
+                <img src="ubuntu-debian.svg" />
+                <span class="ver">3.21 SP 2</span>
+                <span class="plat">Ubuntu / Debian .deb</span>
+              </a>
+            </li>
+          </ul>
+          <p class="other">
+            Also available on:
+            <a href="https://aur.archlinux.org/packages/ultimatetapankaikki/"
+              >Arch Linux (AUR)</a
+            >
+          </p>
+        </div>
 
-          <div class="project">
-            <header>
-              <h3>Tapan Kaikki 4: Bloodshed</h3>
-              <a href="https://github.com/suomipelit/tapankaikki4/">suomipelit/tapankaikki4</a>
-            </header>
-            <img src="pngs/tk4.png" class="image" alt="Tapan Kaikki 4: Bloodshed">
-            <p>Successor of Ultimate Tapan Kaikki.</p>
-            <ul class="downloads">
-              <li>
-                <a href="https://github.com/suomipelit/tapankaikki4/releases/download/v4.09/Tapan.Kaikki.4.09.zip">
-                  <img src="windows.svg" />
-                  <span class="ver">v4.09</span>
-                  <span class="plat">Windows x86 .zip</span>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div class="project">
+          <header>
+            <h3>Tapan Kaikki 4: Bloodshed</h3>
+            <a href="https://github.com/suomipelit/tapankaikki4/"
+              >suomipelit/tapankaikki4</a
+            >
+          </header>
+          <img
+            src="pngs/tk4.png"
+            class="image"
+            alt="Tapan Kaikki 4: Bloodshed"
+          />
+          <p>Successor of Ultimate Tapan Kaikki.</p>
+          <ul class="downloads">
+            <li>
+              <a
+                href="https://github.com/suomipelit/tapankaikki4/releases/download/v4.09/Tapan.Kaikki.4.09.zip"
+              >
+                <img src="windows.svg" />
+                <span class="ver">v4.09</span>
+                <span class="plat">Windows x86 .zip</span>
+              </a>
+            </li>
+          </ul>
+        </div>
 
-          <div class="project">
-            <header>
-              <h3>KOPS</h3>
-              <a href="https://github.com/suomipelit/kops/">suomipelit/kops</a>
-            </header>
-            <img src="pngs/kops.png" class="image" alt="KOPS">
-            <p>Classic two-dimensional gravitational shoot'yer'friend game.</p>
-            <ul class="downloads">
-              <li>
-                <a href="https://github.com/suomipelit/kops/releases/download/v1-win/kops1.2-sp1.zip">
-                  <img src="windows.svg" /> 
-                  <span class="ver">1.2 SP 1</span> 
-                  <span class="plat">Windows x64 .zip</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/suomipelit/kops/releases/download/v1-win/kops1.2-sp1-x86.zip">
-                  <img src="windows.svg" />
-                  <span class="ver">1.2 SP 1</span>
-                  <span class="plat">Windows x86 .zip</span>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div class="project">
+          <header>
+            <h3>KOPS</h3>
+            <a href="https://github.com/suomipelit/kops/">suomipelit/kops</a>
+          </header>
+          <img src="pngs/kops.png" class="image" alt="KOPS" />
+          <p>Classic two-dimensional gravitational shoot'yer'friend game.</p>
+          <ul class="downloads">
+            <li>
+              <a
+                href="https://github.com/suomipelit/kops/releases/download/v1-win/kops1.2-sp1.zip"
+              >
+                <img src="windows.svg" />
+                <span class="ver">1.2 SP 1</span>
+                <span class="plat">Windows x64 .zip</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://github.com/suomipelit/kops/releases/download/v1-win/kops1.2-sp1-x86.zip"
+              >
+                <img src="windows.svg" />
+                <span class="ver">1.2 SP 1</span>
+                <span class="plat">Windows x86 .zip</span>
+              </a>
+            </li>
+          </ul>
+        </div>
 
-          <div class="project">
-            <header>
-              <h3>Triplane Classic</h3>
-              <a href="https://github.com/suomipelit/triplane/">suomipelit/triplane</a>
-            </header>
-            <video autoplay muted class="image">
-              <source src="video/triplane.webm" type="video/webm">
-              <source src="video/triplane.mp4" type="video/mp4">
-            </video>
-            <p>Classic side-scrolling dogfighting game featuring solo
-            missions and multiplayer mode.</p>
-            <ul class="downloads">
-              <li>
-                <a href="https://github.com/suomipelit/triplane/releases/download/v1.0.8-sp1/triplane1.0.8-sp1.zip">
-                  <img src="windows.svg" /> 
-                  <span class="ver">1.0.8 SP 1</span> 
-                  <span class="plat">Windows x64 .zip</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/suomipelit/triplane/releases/download/v1.0.8-sp1/triplane1.0.8-sp1-x86.zip">
-                  <img src="windows.svg" /> 
-                  <span class="ver">1.0.8 SP 1</span> 
-                  <span class="plat">Windows x86 .zip</span>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div class="project">
+          <header>
+            <h3>Triplane Classic</h3>
+            <a href="https://github.com/suomipelit/triplane/"
+              >suomipelit/triplane</a
+            >
+          </header>
+          <video autoplay muted class="image">
+            <source src="video/triplane.webm" type="video/webm" />
+            <source src="video/triplane.mp4" type="video/mp4" />
+          </video>
+          <p>
+            Classic side-scrolling dogfighting game featuring solo missions and
+            multiplayer mode.
+          </p>
+          <ul class="downloads">
+            <li>
+              <a
+                href="https://github.com/suomipelit/triplane/releases/download/v1.0.8-sp1/triplane1.0.8-sp1.zip"
+              >
+                <img src="windows.svg" />
+                <span class="ver">1.0.8 SP 1</span>
+                <span class="plat">Windows x64 .zip</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://github.com/suomipelit/triplane/releases/download/v1.0.8-sp1/triplane1.0.8-sp1-x86.zip"
+              >
+                <img src="windows.svg" />
+                <span class="ver">1.0.8 SP 1</span>
+                <span class="plat">Windows x86 .zip</span>
+              </a>
+            </li>
+          </ul>
+        </div>
 
-          <div class="project">
-            <header>
-              <h3>Ski Jump International v3</h3>
-              <a href="https://github.com/suomipelit/skijump3-sdl/">suomipelit/skijump3-sdl</a>
-            </header>
-            <video autoplay muted class="image">
-              <source src="video/sj3.webm" type="video/webm">
-              <source src="video/sj3.mp4" type="video/mp4">
-            </video>
-            <p>Epic ski jumping game with lots of real hills. Challenge
-            your friends in hotseat World Cup.</p>
-            <ul class="downloads">
-              <li>
-                <a href="https://github.com/suomipelit/skijump3-sdl/releases/download/sj313-sp1/sj313-sp1-win64.zip">
-                  <img src="windows.svg" /> 
-                  <span class="ver">3.13 SP 1</span> 
-                  <span class="plat">Windows x64 .zip</span>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div class="project">
+          <header>
+            <h3>Ski Jump International v3</h3>
+            <a href="https://github.com/suomipelit/skijump3-sdl/"
+              >suomipelit/skijump3-sdl</a
+            >
+          </header>
+          <video autoplay muted class="image">
+            <source src="video/sj3.webm" type="video/webm" />
+            <source src="video/sj3.mp4" type="video/mp4" />
+          </video>
+          <p>
+            Epic ski jumping game with lots of real hills. Challenge your
+            friends in hotseat World Cup.
+          </p>
+          <ul class="downloads">
+            <li>
+              <a
+                href="https://github.com/suomipelit/skijump3-sdl/releases/download/sj313-sp1/sj313-sp1-win64.zip"
+              >
+                <img src="windows.svg" />
+                <span class="ver">3.13 SP 1</span>
+                <span class="plat">Windows x64 .zip</span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-      </section>
-      <section id="contact">
-        <h2>For game authors</h2>
-        <p>
-          Are you sitting on some old source code for a classic suomipeli?! Get in touch on Slack, and we'll get to work
-          porting that stuff to 2018 and beyond!
-        </p>
-        <h2>Suomipelit Slack</h2>
-        <p>
-          There's a <a href="https://join.slack.com/t/suomipelit/shared_invite/enQtNDg1ODkwODU4MTE4LWExY2Q3Mjc0ODg3OTY3ZjlmYThkZDRlMDBjZWUwM2I4NWZlZTFkMWI4YjM1OTM1ODQ4NGQ1NGFiNjQ5MjY0NzM" id="slack">Suomipelit Slack</a> community you're more
-          than welcome to join! We chat in both English and Finnish as necessary.
-        </p>
-      </section>
+    </section>
+    <section id="contact">
+      <h2>For game authors</h2>
+      <p>
+        Are you sitting on some old source code for a classic suomipeli?! Get in
+        touch on Slack, and we'll get to work porting that stuff to 2018 and
+        beyond!
+      </p>
+      <h2>Suomipelit Slack</h2>
+      <p>
+        There's a
+        <a
+          href="https://join.slack.com/t/suomipelit/shared_invite/enQtNDg1ODkwODU4MTE4LWExY2Q3Mjc0ODg3OTY3ZjlmYThkZDRlMDBjZWUwM2I4NWZlZTFkMWI4YjM1OTM1ODQ4NGQ1NGFiNjQ5MjY0NzM"
+          id="slack"
+          >Suomipelit Slack</a
+        >
+        community you're more than welcome to join! We chat in both English and
+        Finnish as necessary.
+      </p>
+    </section>
     <script src="rough.min.js"></script>
     <script src="mikromikko.js"></script>
   </body>
