Bröther, give us some video lööps

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               >suomipelit/ultimatetapankaikki</a
             >
           </header>
-          <video autoplay muted class="image">
+          <video autoplay muted loop class="image">
             <source src="video/tk321.webm" type="video/webm" />
             <source src="video/tk321.mp4" type="video/mp4" />
           </video>
@@ -144,7 +144,7 @@
               >suomipelit/triplane</a
             >
           </header>
-          <video autoplay muted class="image">
+          <video autoplay muted loop class="image">
             <source src="video/triplane.webm" type="video/webm" />
             <source src="video/triplane.mp4" type="video/mp4" />
           </video>
@@ -181,7 +181,7 @@
               >suomipelit/skijump3-sdl</a
             >
           </header>
-          <video autoplay muted class="image">
+          <video autoplay muted loop class="image">
             <source src="video/sj3.webm" type="video/webm" />
             <source src="video/sj3.mp4" type="video/mp4" />
           </video>
