--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section>
       <svg id="s" viewBox="0 0 476 476" width="80%"></svg>
-      <h1><a href="https://github.com/suomipelit">Suomipelit</a></h1>
+      <h1><a href="https://github.com/suomipelit">Suomi&shy;pelit</a></h1>
       <p class="lede">
         We archive, port, and maintain classic Finnish freeware and shareware
         games.<br />
