Add link to online TK

--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
               </a>
             </li>
           </ul>
+          <ul class="downloads">
+            <li>
+              <a
+                href="https://suomipelit.github.io/ultimatetapankaikki-web/"
+              >
+                <img src="online.svg" />
+                <span class="ver">3.21 SP 2</span>
+                <span class="plat">Web Browser <sup>Beta</sup></span>
+              </a>
+            </li>
+          </ul>          
           <p class="other">
             Also available on:
             <a href="https://aur.archlinux.org/packages/ultimatetapankaikki/"
