--- a/index.html
+++ b/index.html
@@ -182,6 +182,15 @@
                 <span class="plat">Windows x86 .zip</span>
               </a>
             </li>
+            <li>
+              <a
+                href="https://suomipelit.github.io/triplane-web/"
+              >
+                <img src="online.svg" />
+                <span class="ver">1.0.8 SP 1</span>
+                <span class="plat">Web Browser <sup>Beta</sup></span>
+              </a>
+            </li>
           </ul>
         </div>
 
