Update Web UTK version

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 href="https://suomipelit.github.io/ultimatetapankaikki-web/"
               >
                 <img src="online.svg" />
-                <span class="ver">3.21 SP 2</span>
+                <span class="ver">3.21 SP 3 SNAPSHOT</span>
                 <span class="plat">Web Browser <sup>Beta</sup></span>
               </a>
             </li>
