Update web triplane verison to "SP 2 SNAPSHOT"

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 href="https://suomipelit.github.io/triplane-web/"
               >
                 <img src="online.svg" />
-                <span class="ver">1.0.8 SP 1</span>
+                <span class="ver">1.0.8 SP 2 SNAPSHOT</span>
                 <span class="plat">Web Browser <sup>Beta</sup></span>
               </a>
             </li>
