Triplane SP2 - prioritize web build

--- a/index.html
+++ b/index.html
@@ -166,29 +166,29 @@
           <ul class="downloads">
             <li>
               <a
-                href="https://github.com/suomipelit/triplane/releases/download/v1.0.8-sp1/triplane1.0.8-sp1.zip"
+                href="https://suomipelit.github.io/triplane-web/"
+              >
+                <img src="online.svg" />
+                <span class="ver">1.0.8 SP 2</span>
+                <span class="plat">Web Browser</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://github.com/suomipelit/triplane/releases/download/v1.0.8-sp2/triplane1.0.8-sp2.zip"
               >
                 <img src="windows.svg" />
-                <span class="ver">1.0.8 SP 1</span>
+                <span class="ver">1.0.8 SP 2</span>
                 <span class="plat">Windows x64 .zip</span>
               </a>
             </li>
             <li>
               <a
-                href="https://github.com/suomipelit/triplane/releases/download/v1.0.8-sp1/triplane1.0.8-sp1-x86.zip"
+                href="https://github.com/suomipelit/triplane/releases/download/v1.0.8-sp2/triplane1.0.8-sp2-x86.zip"
               >
                 <img src="windows.svg" />
-                <span class="ver">1.0.8 SP 1</span>
+                <span class="ver">1.0.8 SP 2</span>
                 <span class="plat">Windows x86 .zip</span>
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://suomipelit.github.io/triplane-web/"
-              >
-                <img src="online.svg" />
-                <span class="ver">1.0.8 SP 2 SNAPSHOT</span>
-                <span class="plat">Web Browser <sup>Beta</sup></span>
               </a>
             </li>
           </ul>
