Slightly emslimmen things

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section>
-      <svg id="s" viewBox="0 0 476 476" width="80%"></svg>
+      <svg id="s" viewBox="0 0 476 476" style="max-width: 400px;"></svg>
       <h1><a href="https://github.com/suomipelit">Suomi&shy;pelit</a></h1>
       <p class="lede">
         We archive, port, and maintain classic Finnish freeware and shareware
@@ -24,9 +24,10 @@
         <div class="project">
           <header>
             <h3>Ultimate Tapan Kaikki</h3>
-            <a href="https://github.com/suomipelit/ultimatetapankaikki/"
-              >suomipelit/ultimatetapankaikki</a
-            >
+            <a href="https://github.com/suomipelit/ultimatetapankaikki/">
+              <img src="github.svg" alt="GitHub" />
+              suomipelit/ultimatetapankaikki
+            </a>
           </header>
           <video autoplay muted loop class="image">
             <source src="video/tk321.webm" type="video/webm" />
@@ -97,7 +98,7 @@
           <header>
             <h3>Tapan Kaikki 4: Bloodshed</h3>
             <a href="https://github.com/suomipelit/tapankaikki4/"
-              >suomipelit/tapankaikki4</a
+              ><img src="github.svg" alt="GitHub" /> suomipelit/tapankaikki4</a
             >
           </header>
           <img
@@ -122,7 +123,9 @@
         <div class="project">
           <header>
             <h3>KOPS</h3>
-            <a href="https://github.com/suomipelit/kops/">suomipelit/kops</a>
+            <a href="https://github.com/suomipelit/kops/"
+              ><img src="github.svg" alt="GitHub" /> suomipelit/kops</a
+            >
           </header>
           <img src="pngs/kops.png" class="image" alt="KOPS" />
           <p>Classic two-dimensional gravitational shoot'yer'friend game.</p>
@@ -152,7 +155,7 @@
           <header>
             <h3>Triplane Classic</h3>
             <a href="https://github.com/suomipelit/triplane/"
-              >suomipelit/triplane</a
+              ><img src="github.svg" alt="GitHub" /> suomipelit/triplane</a
             >
           </header>
           <video autoplay muted loop class="image">
@@ -198,7 +201,7 @@
           <header>
             <h3>Ski Jump International v3</h3>
             <a href="https://github.com/suomipelit/skijump3-sdl/"
-              >suomipelit/skijump3-sdl</a
+              ><img src="github.svg" alt="GitHub" /> suomipelit/skijump3-sdl</a
             >
           </header>
           <video autoplay muted loop class="image">
