--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
           <header>
             <h3>Ultimate Tapan Kaikki</h3>
             <a href="https://github.com/suomipelit/ultimatetapankaikki/">
-              <img src="github.svg" alt="GitHub" />
-              suomipelit/ultimatetapankaikki
+              <img src="github.svg" alt="GitHub" /> ~/ultimatetapankaikki
             </a>
           </header>
           <video autoplay muted loop class="image">
@@ -77,15 +76,13 @@
           </ul>
           <ul class="downloads">
             <li>
-              <a
-                href="https://suomipelit.github.io/ultimatetapankaikki-web/"
-              >
+              <a href="https://suomipelit.github.io/ultimatetapankaikki-web/">
                 <img src="online.svg" />
                 <span class="ver">3.21 SP 3 SNAPSHOT</span>
                 <span class="plat">Web Browser <sup>Beta</sup></span>
               </a>
             </li>
-          </ul>          
+          </ul>
           <p class="other">
             Also available on:
             <a href="https://aur.archlinux.org/packages/ultimatetapankaikki/"
@@ -98,7 +95,7 @@
           <header>
             <h3>Tapan Kaikki 4: Bloodshed</h3>
             <a href="https://github.com/suomipelit/tapankaikki4/"
-              ><img src="github.svg" alt="GitHub" /> suomipelit/tapankaikki4</a
+              ><img src="github.svg" alt="GitHub" /> ~/tapankaikki4</a
             >
           </header>
           <img
@@ -124,7 +121,7 @@
           <header>
             <h3>KOPS</h3>
             <a href="https://github.com/suomipelit/kops/"
-              ><img src="github.svg" alt="GitHub" /> suomipelit/kops</a
+              ><img src="github.svg" alt="GitHub" /> ~/kops</a
             >
           </header>
           <img src="pngs/kops.png" class="image" alt="KOPS" />
@@ -155,7 +152,7 @@
           <header>
             <h3>Triplane Classic</h3>
             <a href="https://github.com/suomipelit/triplane/"
-              ><img src="github.svg" alt="GitHub" /> suomipelit/triplane</a
+              ><img src="github.svg" alt="GitHub" /> ~/triplane</a
             >
           </header>
           <video autoplay muted loop class="image">
@@ -168,9 +165,7 @@
           </p>
           <ul class="downloads">
             <li>
-              <a
-                href="https://suomipelit.github.io/triplane-web/"
-              >
+              <a href="https://suomipelit.github.io/triplane-web/">
                 <img src="online.svg" />
                 <span class="ver">1.0.8 SP 2</span>
                 <span class="plat">Web Browser</span>
@@ -201,7 +196,7 @@
           <header>
             <h3>Ski Jump International v3</h3>
             <a href="https://github.com/suomipelit/skijump3-sdl/"
-              ><img src="github.svg" alt="GitHub" /> suomipelit/skijump3-sdl</a
+              ><img src="github.svg" alt="GitHub" /> ~/skijump3-sdl</a
             >
           </header>
           <video autoplay muted loop class="image">
