Update UTK Win and Web to SP3

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
           <ul class="downloads">
             <li>
               <a
-                href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v2/tk321-sp2.zip"
+                href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v3/tk321-sp3.zip"
               >
                 <img src="windows.svg" />
-                <span class="ver">3.21 SP 2</span>
+                <span class="ver">3.21 SP 3</span>
                 <span class="plat">Windows x64 .zip</span>
               </a>
             </li>
             <li>
               <a
-                href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v2/tk321-sp2-x86.zip"
+                href="https://github.com/suomipelit/ultimatetapankaikki/releases/download/v3/tk321-sp3-x86.zip"
               >
                 <img src="windows.svg" />
-                <span class="ver">3.21 SP 2</span>
+                <span class="ver">3.21 SP 3</span>
                 <span class="plat">Windows x86 .zip</span>
               </a>
             </li>
@@ -78,8 +78,8 @@
             <li>
               <a href="https://suomipelit.github.io/ultimatetapankaikki-web/">
                 <img src="online.svg" />
-                <span class="ver">3.21 SP 3 SNAPSHOT</span>
-                <span class="plat">Web Browser <sup>Beta</sup></span>
+                <span class="ver">3.21 SP 3</span>
+                <span class="plat">Web Browser</span>
               </a>
             </li>
           </ul>
